--- a/Stickers Project/Stickers/MainWindow.xaml
+++ b/Stickers Project/Stickers/MainWindow.xaml
@@ -22,12 +22,14 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="0.1*"/>
             <RowDefinition Height="0.9*"/>
             <RowDefinition Height="0.1*"/>
         </Grid.RowDefinitions>
-    <StackPanel x:Name="listOfItems" Grid.Column="0" Grid.Row="0">
-        <!--<GroupBox Template = "{StaticResource itemTemplate}" />-->
-    </StackPanel>
-        <Button Grid.Column="0" Grid.Row="1" Content="+" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="Button_Click_1"/>
+        <TextBox x:Name="stickerName" Text="Name of your sticker here" ToolTip="Name of your sticker here" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="0" Grid.Row="0" GotFocus="stickerName_GotFocus" LostFocus="stickerName_LostFocus" BorderBrush="White" />
+        <StackPanel x:Name="listOfItems" Grid.Column="0" Grid.Row="1">
+            <!--<GroupBox Template = "{StaticResource itemTemplate}" />-->
+        </StackPanel>
+        <Button Grid.Column="0" Grid.Row="2" Content="+" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="Button_Click_1"/>
     </Grid>
 </Window>
